@@ -3,12 +3,15 @@ package com.ruoyi.common.utils.file;
 import java.io.ByteArrayInputStream;
 import java.io.FileInputStream;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Arrays;
+
 import org.apache.poi.util.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
 import com.ruoyi.common.config.RuoYiConfig;
 import com.ruoyi.common.constant.Constants;
 import com.ruoyi.common.utils.StringUtils;
@@ -69,7 +72,7 @@ public class ImageUtils
             if (url.startsWith("http"))
             {
                 // 网络地址
-                URL urlObj = new URL(url);
+                URL urlObj = new URI(url).toURL();
                 URLConnection urlConnection = urlObj.openConnection();
                 urlConnection.setConnectTimeout(30 * 1000);
                 urlConnection.setReadTimeout(60 * 1000);
